update pytorch kf code - factor out into script so we can choose between jax and pt

--- a/dynamax/linear_gaussian_ssm/demos/kf-linreg-pt.ipynb
+++ b/dynamax/linear_gaussian_ssm/demos/kf-linreg-pt.ipynb
@@ -10,17 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from jaxtyping import Float, Array\n",
@@ -49,16 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-10 19:57:42.745106: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'2.11.0'"
+       "'2.12.0'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +78,7 @@
        "'0.19.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,35 +99,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4.1\n",
-      "[CpuDevice(id=0)]\n"
+      "0.4.8\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Unable to initialize backend 'tpu': INVALID_ARGUMENT: Unexpected PJRT_Api size: expected 544, got 496. Check installed software versions. (set JAX_PLATFORMS='' to automatically choose an available backend)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mXlaRuntimeError\u001b[0m                           Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/xla_bridge.py:420\u001b[0m, in \u001b[0;36mbackends\u001b[0;34m()\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 420\u001b[0m   backend \u001b[39m=\u001b[39m _init_backend(platform)\n\u001b[1;32m    421\u001b[0m   _backends[platform] \u001b[39m=\u001b[39m backend\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/xla_bridge.py:473\u001b[0m, in \u001b[0;36m_init_backend\u001b[0;34m(platform)\u001b[0m\n\u001b[1;32m    472\u001b[0m logger\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mInitializing backend \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m, platform)\n\u001b[0;32m--> 473\u001b[0m backend \u001b[39m=\u001b[39m factory()\n\u001b[1;32m    474\u001b[0m \u001b[39m# TODO(skye): consider raising more descriptive errors directly from backend\u001b[39;00m\n\u001b[1;32m    475\u001b[0m \u001b[39m# factories instead of returning None.\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/xla_bridge.py:179\u001b[0m, in \u001b[0;36mtpu_client_timer_callback\u001b[0;34m(timer_secs)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 179\u001b[0m   client \u001b[39m=\u001b[39m xla_client\u001b[39m.\u001b[39;49mmake_tpu_client()\n\u001b[1;32m    180\u001b[0m \u001b[39mfinally\u001b[39;00m:\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jaxlib/xla_client.py:147\u001b[0m, in \u001b[0;36mmake_tpu_client\u001b[0;34m(use_pjrt_c_api)\u001b[0m\n\u001b[1;32m    146\u001b[0m library_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetenv(\u001b[39m'\u001b[39m\u001b[39mTPU_LIBRARY_PATH\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlibtpu.so\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 147\u001b[0m load_pjrt_plugin_dynamically(\u001b[39m'\u001b[39;49m\u001b[39mtpu\u001b[39;49m\u001b[39m'\u001b[39;49m, library_path)\n\u001b[1;32m    148\u001b[0m \u001b[39mreturn\u001b[39;00m make_tfrt_tpu_c_api_client()\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jaxlib/xla_client.py:110\u001b[0m, in \u001b[0;36mload_pjrt_plugin_dynamically\u001b[0;34m(plugin_name, library_path)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_pjrt_plugin_dynamically\u001b[39m(plugin_name: \u001b[39mstr\u001b[39m, library_path: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 110\u001b[0m   _xla\u001b[39m.\u001b[39;49mload_pjrt_plugin(plugin_name, library_path)\n",
+      "\u001b[0;31mXlaRuntimeError\u001b[0m: INVALID_ARGUMENT: Unexpected PJRT_Api size: expected 544, got 496. Check installed software versions.",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjax\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(jax\u001b[39m.\u001b[39m__version__)\n\u001b[0;32m----> 3\u001b[0m \u001b[39mprint\u001b[39m(jax\u001b[39m.\u001b[39;49mdevices())\n\u001b[1;32m      5\u001b[0m x \u001b[39m=\u001b[39m jnp\u001b[39m.\u001b[39marray([\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m])\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(x\u001b[39m.\u001b[39mshape, \u001b[39mtype\u001b[39m(x))\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/xla_bridge.py:584\u001b[0m, in \u001b[0;36mdevices\u001b[0;34m(backend)\u001b[0m\n\u001b[1;32m    559\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdevices\u001b[39m(\n\u001b[1;32m    560\u001b[0m     backend: Optional[Union[\u001b[39mstr\u001b[39m, xla_client\u001b[39m.\u001b[39mClient]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    561\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m List[xla_client\u001b[39m.\u001b[39mDevice]:\n\u001b[1;32m    562\u001b[0m \u001b[39m  \u001b[39m\u001b[39m\"\"\"Returns a list of all devices for a given backend.\u001b[39;00m\n\u001b[1;32m    563\u001b[0m \n\u001b[1;32m    564\u001b[0m \u001b[39m  .. currentmodule:: jaxlib.xla_extension\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    582\u001b[0m \u001b[39m    List of Device subclasses.\u001b[39;00m\n\u001b[1;32m    583\u001b[0m \u001b[39m  \"\"\"\u001b[39;00m\n\u001b[0;32m--> 584\u001b[0m   \u001b[39mreturn\u001b[39;00m get_backend(backend)\u001b[39m.\u001b[39mdevices()\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/xla_bridge.py:518\u001b[0m, in \u001b[0;36mget_backend\u001b[0;34m(platform)\u001b[0m\n\u001b[1;32m    514\u001b[0m \u001b[39m@lru_cache\u001b[39m(maxsize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)  \u001b[39m# don't use util.memoize because there is no X64 dependence.\u001b[39;00m\n\u001b[1;32m    515\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_backend\u001b[39m(\n\u001b[1;32m    516\u001b[0m     platform: Union[\u001b[39mNone\u001b[39;00m, \u001b[39mstr\u001b[39m, xla_client\u001b[39m.\u001b[39mClient] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    517\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m xla_client\u001b[39m.\u001b[39mClient:\n\u001b[0;32m--> 518\u001b[0m   \u001b[39mreturn\u001b[39;00m _get_backend_uncached(platform)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/xla_bridge.py:499\u001b[0m, in \u001b[0;36m_get_backend_uncached\u001b[0;34m(platform)\u001b[0m\n\u001b[1;32m    494\u001b[0m   \u001b[39mreturn\u001b[39;00m platform\n\u001b[1;32m    496\u001b[0m platform \u001b[39m=\u001b[39m (platform \u001b[39mor\u001b[39;00m FLAGS\u001b[39m.\u001b[39mjax_xla_backend \u001b[39mor\u001b[39;00m FLAGS\u001b[39m.\u001b[39mjax_platform_name\n\u001b[1;32m    497\u001b[0m             \u001b[39mor\u001b[39;00m \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m--> 499\u001b[0m bs \u001b[39m=\u001b[39m backends()\n\u001b[1;32m    500\u001b[0m \u001b[39mif\u001b[39;00m platform \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    501\u001b[0m   platform \u001b[39m=\u001b[39m canonicalize_platform(platform)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/xla_bridge.py:437\u001b[0m, in \u001b[0;36mbackends\u001b[0;34m()\u001b[0m\n\u001b[1;32m    435\u001b[0m \u001b[39mif\u001b[39;00m config\u001b[39m.\u001b[39mjax_platforms:\n\u001b[1;32m    436\u001b[0m   err_msg \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m (set JAX_PLATFORMS=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\u001b[39m to automatically choose an available backend)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 437\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(err_msg)\n\u001b[1;32m    438\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    439\u001b[0m   _backends_errors[platform] \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(err)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Unable to initialize backend 'tpu': INVALID_ARGUMENT: Unexpected PJRT_Api size: expected 544, got 496. Check installed software versions. (set JAX_PLATFORMS='' to automatically choose an available backend)"
      ]
     }
    ],
    "source": [
     "import jax\n",
     "print(jax.__version__)\n",
-    "print(jax.devices())\n"
+    "print(jax.devices())\n",
+    "\n",
+    "x = jnp.array([1, 2, 3])\n",
+    "print(x.shape, type(x))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0.0\n"
+      "2.0.0+cu117\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7f9c6c163a70>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -139,10 +173,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0.0+cu117\n",
+      "xla:0\n",
+      "tensor([[ 0.1874, -1.3475, -0.0610],\n",
+      "        [ 0.7354,  1.8028, -1.4321],\n",
+      "        [-0.9202, -2.0584, -1.4974]], device='xla:0')\n"
+     ]
+    }
+   ],
    "source": [
+    "import torch\n",
+    "print(torch.__version__)\n",
     "import torch_xla.core.xla_model as xm\n",
     "dev = xm.xla_device()\n",
     "print(dev)\n",
@@ -154,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
