--- a/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "We perform sequential (recursive) Bayesian inference for the parameters of a linear regression model\n",
     "using the Kalman filter. (This algorithm is also known as recursive least squares.)\n",
-    "To do this, we treat the parameers of the model as the unknown hidden states.\n",
+    "To do this, we treat the parameters of the model as the unknown hidden states.\n",
     "We assume that these are constant over time.\n",
     "The graphical model is shown below.\n",
     "\n",
