--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "This is a generalized Gaussian SSM, where the observation model is non-Gaussian.\n",
         "\n",
-        "To perform approximate inferece, using the  conditional moments Gaussian filter (CMGF).\n",
+        "To perform approximate inference, using the conditional moments Gaussian filter (CMGF).\n",
         "We approximate the relevant integrals using 3 different methods: linearization (extended Kalman filter),\n",
         "sigma point approximation (unscented kalman filter), and Gauss hermite integration (order 5).\n",
         "We compare results with the offline (batch) Laplace approximation, and see that GHKF converges fastest to the batch solution,\n",
