--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
@@ -39,7 +39,7 @@
         "\n",
         "This is a generalized Gaussian SSM, where the observation model is non-linear and non-Gaussian.\n",
         "\n",
-        "To perform approximate inferece, using the  conditional moments Gaussian filter (CMGF).\n",
+        "To perform approximate inference, using the conditional moments Gaussian filter (CMGF).\n",
         "We approximate the relevant integrals using the extended Kalman filter.\n",
         "For more details, see sec 8.7.7 of [Probabilistic Machine Learning: Advanced Topics](https://probml.github.io/pml-book/book2.html).\n",
         "\n",
@@ -395,7 +395,7 @@
       },
       "outputs": [],
       "source": [
-        "# Some model parameters and helper funciton\n",
+        "# Some model parameters and helper function\n",
         "state_dim, emission_dim = flat_params.size, output_dim\n",
         "sigmoid_fn = lambda w, x: jax.nn.sigmoid(apply_fn(w, x))\n",
         "\n",
