--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Fitting an LDS with Poisson Likelihood using conditional moments Gaussian filter\n",
         "\n",
-        "Adapted fom [https://github.com/lindermanlab/ssm-jax/blob/main/notebooks/poisson-lds-example.ipynb](https://github.com/lindermanlab/ssm-jax/blob/main/notebooks/poisson-lds-example.ipynb )"
+        "Adapted from [https://github.com/lindermanlab/ssm-jax/blob/main/notebooks/poisson-lds-example.ipynb](https://github.com/lindermanlab/ssm-jax/blob/main/notebooks/poisson-lds-example.ipynb )"
       ]
     },
     {
@@ -221,7 +221,7 @@
         "id": "0DV-H8hRYJbK"
       },
       "source": [
-        "First, we define a helper random rotation functionto use as our dynamics function."
+        "First, we define a helper random rotation function to use as our dynamics function."
       ]
     },
     {
