--- a/docs/notebooks/hmm/gaussian_hmm.ipynb
+++ b/docs/notebooks/hmm/gaussian_hmm.ipynb
@@ -237,7 +237,7 @@
     "\n",
     "This function fits the data into _folds_ where each fold consists of all\n",
     "but one of the training sequences. It fits the model to each fold in \n",
-    "parallel, and then computs the log likelihood of the held-out sequence for\n",
+    "parallel, and then computes the log likelihood of the held-out sequence for\n",
     "each fold. The average held-out log likelihood is what we will use for \n",
     "determining the number of discrete states."
    ]
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot the individual and average validation log likelihods as a function of number of states"
+    "### Plot the individual and average validation log likelihoods as a function of number of states"
    ]
   },
   {
