--- a/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
@@ -203,7 +203,7 @@
             "source": [
                 "\n",
                 "\n",
-                "# Initilize parameters by fitting EM algorithm\n",
+                "# Initialize parameters by fitting EM algorithm\n",
                 "num_iters = 100\n",
                 "test_model = LinearGaussianSSM(state_dim, emission_dim)\n",
                 "initial_params, param_props = test_model.initialize(next(keys))\n",
@@ -539,7 +539,7 @@
             "source": [
                 "## Use HMC to infer posterior over a subset of the parameters\n",
                 "\n",
-                "We freeze the transition parameters and inital parameters, so that only covariance matrices are learned.\n",
+                "We freeze the transition parameters and initial parameters, so that only covariance matrices are learned.\n",
                 "This is useful for structural time series models (see e.g., [sts-jax](https://github.com/probml/sts-jax) library, \n",
                 "which builds on dynamax.).\n"
             ]
@@ -550,7 +550,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Freeze transition parameters and inital parameters, so that only covariance matrices are learned\n",
+                "# Freeze transition parameters and initial parameters, so that only covariance matrices are learned\n",
                 "\n",
                 "test_model = LinearGaussianSSM(state_dim, emission_dim)\n",
                 "test_params, test_param_props = test_model.initialize(next(keys),\n",
@@ -559,7 +559,7 @@
                 "                                                      emission_weights=true_params.emissions.weights,\n",
                 "                                                      emission_bias=true_params.emissions.bias)\n",
                 "\n",
-                "# Set transition parameters and inital parameters to true values and mark as frozen\n",
+                "# Set transition parameters and initial parameters to true values and mark as frozen\n",
                 "test_param_props.dynamics.weights.trainable = False\n",
                 "test_param_props.dynamics.bias.trainable = False\n",
                 "test_param_props.emissions.weights.trainable = False\n",
