fix typos in the formulas
fix typos in the formula to make them correct and agree with python code

--- a/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
@@ -27,14 +27,14 @@
     "\n",
     "Let the hidden state represent\n",
     "the position and velocity of the object,\n",
-    "$z_t =\\begin{pmatrix} u_t & \\dot{u}_t & v_t & \\dot{v}_t \\end{pmatrix}$.\n",
+    "$z_t =\\begin{pmatrix} u_t & v_t & \\dot{u}_t & \\dot{v}_t \\end{pmatrix}$.\n",
     "(We use $u$ and $v$ for the two coordinates,\n",
     "to avoid confusion with the state and observation variables.)\n",
     "The process evolves in continuous time, but if we discretize it with step size $\\Delta$,\n",
     "we can write the dynamics as the following linear system:\n",
     "\n",
     "\\begin{align*}\n",
-    "\\underbrace{\\begin{pmatrix} u_t\\\\ \\dot{u}_t \\\\ v_t \\\\ \\dot{v}_t \\end{pmatrix}}_{z_t}\n",
+    "\\underbrace{\\begin{pmatrix} u_t\\\\ v_t \\\\ \\dot{u}_t \\\\ \\dot{v}_t \\end{pmatrix}}_{z_t}\n",
     "  = \n",
     "\\underbrace{\n",
     "\\begin{pmatrix}\n",
@@ -44,7 +44,7 @@
     "0 & 0 & 0 & 1\n",
     "\\end{pmatrix}\n",
     "}_{F}\n",
-    "\\underbrace{\\begin{pmatrix} u_{t-1} \\\\ \\dot{u}_{t-1} \\\\ v_{t-1} \\\\ \\dot{v}_{t-1} \\end{pmatrix}}_{z_{t-1}}\n",
+    "\\underbrace{\\begin{pmatrix} u_{t-1} \\\\ v_{t-1} \\\\ \\dot{u}_{t-1} \\\\ \\dot{v}_{t-1} \\end{pmatrix}}_{z_{t-1}}\n",
     "+ q_t\n",
     "\\end{align*}\n",
     "\n",
@@ -62,11 +62,11 @@
     "    \\underbrace{\n",
     "    \\begin{pmatrix}\n",
     "1 & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & 1 & 0\n",
+    "0 & 1 & 0 & 0\n",
     "    \\end{pmatrix}\n",
     "    }_{H}\n",
     "    \\;\n",
-    "\\underbrace{\\begin{pmatrix} u_t\\\\ \\dot{u}_t \\\\ v_t \\\\ \\dot{v}_t \\end{pmatrix}}_{z_t}    \n",
+    "\\underbrace{\\begin{pmatrix} u_t\\\\ v_t \\\\ \\dot{u}_t \\\\ \\dot{v}_t \\end{pmatrix}}_{z_t}    \n",
     " + r_t\n",
     "\\end{align*}\n",
     "\n",
