updating and simplifying our new notebook directory. moving all new notebooks to src/notebooks

--- a/src/notebooks/non_linear/cd_ekf_ukf_enkf_Lorenz63.ipynb
+++ b/src/notebooks/non_linear/cd_ekf_ukf_enkf_Lorenz63.ipynb
@@ -41,6 +41,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that under regular sampling intervals, the typical discrete-time non-linear filtering paradigm is often sufficient. We do not compare to these for brevity. Instead, we simply demonstrate the performance of continuous-discrete methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "vLt4p8Tx4hWN"
    },
