--- a/notebooks/diffrax_kalman_filter.ipynb
+++ b/notebooks/diffrax_kalman_filter.ipynb
@@ -462,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ode_control')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -476,9 +476,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "9bce93e623406d1c11f9dd3ce02c7f824470b99b3bb3335b56643c76e124d379"
