--- a/notebooks/ekf_ukf_pendulum_diffrax.ipynb
+++ b/notebooks/ekf_ukf_pendulum_diffrax.ipynb
@@ -560,7 +560,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 ('dynamax')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
