updating non-linear filtering notebooks for new code

--- a/src/notebooks/non_linear/cd_ekf_ukf_pendulum.ipynb
+++ b/src/notebooks/non_linear/cd_ekf_ukf_pendulum.ipynb
@@ -73,32 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "djYX5weABagr",
-    "outputId": "0185bf5c-f9da-4ebf-fd5c-dd3e5068291f"
-   },
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "try:\n",
-    "    import dynamax\n",
-    "except ModuleNotFoundError:\n",
-    "    print('installing dynamax')\n",
-    "    %pip install -q dynamax[notebooks]\n",
-    "    import dynamax"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "%matplotlib inline\n",
+    "sys.path.append(\"../../..\")\n",
+    "sys.path.append(\"../..\")\n",
+    "\n",
+    "import dynamax\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import jax.numpy as jnp\n",
@@ -132,11 +117,8 @@
    "outputs": [],
    "source": [
     "# import continuous-discrete nonlinear Gaussian SSM code\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "sys.path.append(\"../src\")\n",
     "# use custom src codebase\n",
-    "from utils.plotting import *\n",
+    "from utils.plotting_utils import *\n",
     "from continuous_discrete_nonlinear_gaussian_ssm import ContDiscreteNonlinearGaussianSSM\n",
     "from continuous_discrete_nonlinear_gaussian_ssm import cdnlgssm_filter\n",
     "from continuous_discrete_nonlinear_gaussian_ssm import EnKFHyperParams, EKFHyperParams, UKFHyperParams\n"
