--- a/src/notebooks/non_linear/cd_ekf_ukf_pendulum.ipynb
+++ b/src/notebooks/non_linear/cd_ekf_ukf_pendulum.ipynb
@@ -130,6 +130,7 @@
     "# import continuous-discrete nonlinear Gaussian SSM code\n",
     "# use custom src codebase\n",
     "from utils.plotting_utils import *\n",
+    "from continuous_discrete_nonlinear_gaussian_ssm.models import *\n",
     "from continuous_discrete_nonlinear_gaussian_ssm import ContDiscreteNonlinearGaussianSSM\n",
     "from continuous_discrete_nonlinear_gaussian_ssm import cdnlgssm_filter\n",
     "from continuous_discrete_nonlinear_gaussian_ssm import EnKFHyperParams, EKFHyperParams, UKFHyperParams\n"
@@ -166,8 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sampling from SDE solver path (this may be an unnecessarily poor approximation if you're simulating from a linear SDE). It is an appropriate choice for non-linear SDEs.\n",
-      "state.shape (2,)\n"
+      "Sampling from SDE solver path (this may be an unnecessarily poor approximation if you're simulating from a linear SDE). It is an appropriate choice for non-linear SDEs.\n"
      ]
     },
     {
@@ -204,12 +204,7 @@
     "t_emissions = jnp.array(sorted(jr.uniform(jr.PRNGKey(0), (num_timesteps, 1), minval=0, maxval=T)))\n",
     "\n",
     "# set up drift function\n",
-    "from continuous_discrete_nonlinear_gaussian_ssm.models import (\n",
-    "    LearnableFunction,\n",
-    "    ConstantLearnableFunction,\n",
-    "    LinearLearnableFunction,\n",
-    ")\n",
-    "\n",
+    "from continuous_discrete_nonlinear_gaussian_ssm.models import *\n",
     "class CustomDrift(LearnableFunction):\n",
     "    params: 0\n",
     "\n",
@@ -223,18 +218,36 @@
     "        return jnp.array([jnp.sin(x[0])])\n",
     "\n",
     "\n",
-    "learnable_drift = CustomDrift(params=0)\n",
-    "learnable_emission = CustomEmission(params=0)\n",
-    "learnable_diffusion_cov = ConstantLearnableFunction(params=jnp.eye(state_dim) * (q_c**2))\n",
-    "learnable_diffusion_coefficient = ConstantLearnableFunction(params=L)\n",
-    "learnable_emission_cov = ConstantLearnableFunction(params=jnp.eye(emission_dim) * (r**2))\n",
+    "learnable_drift = {\"params\": CustomDrift(params=0), \"props\": CustomDrift(params=ParameterProperties(trainable=True))}\n",
+    "learnable_emission = {\"params\": CustomEmission(params=0), \"props\": CustomEmission(params=ParameterProperties(trainable=True))}\n",
+    "learnable_diffusion_cov = {\n",
+    "    \"params\": LearnableMatrix(params=jnp.eye(state_dim) * (q_c**2)),\n",
+    "    \"props\": LearnableMatrix(params=ParameterProperties(trainable=True, constrainer=RealToPSDBijector())),\n",
+    "}\n",
+    "learnable_diffusion_coefficient = {\n",
+    "    \"params\": LearnableMatrix(params=L),\n",
+    "    \"props\": LearnableMatrix(params=ParameterProperties(trainable=True, constrainer=RealToPSDBijector())),\n",
+    "}\n",
+    "learnable_emission_cov = {\n",
+    "    \"params\": LearnableMatrix(params=jnp.eye(emission_dim) * (r**2)),\n",
+    "    \"props\": LearnableMatrix(params=ParameterProperties(trainable=True, constrainer=RealToPSDBijector())),\n",
+    "\n",
+    "}\n",
+    "\n",
+    "initial_mean = {\"params\": jnp.array([jnp.pi / 2, 0]), \"props\": ParameterProperties(trainable=True)}\n",
+    "\n",
+    "initial_cov = {\n",
+    "    \"params\": jnp.eye(state_dim) * 0.2,\n",
+    "    \"props\": ParameterProperties(trainable=True, constrainer=RealToPSDBijector()),\n",
+    "}\n",
+    "\n",
     "\n",
     "true_model = ContDiscreteNonlinearGaussianSSM(state_dim, emission_dim)\n",
     "key, key_root = jr.split(key)\n",
     "true_params, param_props = true_model.initialize(\n",
     "    key,\n",
-    "    initial_mean=jnp.array([jnp.pi / 2, 0]),\n",
-    "    initial_cov=jnp.eye(state_dim) * 0.2,\n",
+    "    initial_mean=initial_mean,\n",
+    "    initial_cov=initial_cov,\n",
     "    dynamics_drift=learnable_drift,\n",
     "    dynamics_diffusion_coefficient=learnable_diffusion_coefficient,\n",
     "    dynamics_diffusion_cov=learnable_diffusion_cov,\n",
@@ -450,6 +463,13 @@
     "plot_pendulum(t_emissions, true_states[:, 0], emissions, x_est=m_ukf, est_type=\"UKF\")\n",
     "compute_and_print_rmse_comparison(true_states[:, 0], m_ukf, r, \"UKF\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
