--- a/src/notebooks/non_linear/cd_ekf_ukf_enkf_Lorenz63_irregular_times.ipynb
+++ b/src/notebooks/non_linear/cd_ekf_ukf_enkf_Lorenz63_irregular_times.ipynb
@@ -52,20 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/anaconda3/envs/hduq_nodynamax/lib/python3.11/site-packages/equinox/_ad.py:733: UserWarning: As of Equinox 0.10.7, `equinox.filter_custom_vjp.defvjp` is deprecated in favour of `.def_fwd` and `.def_bwd`. This new API supports symbolic zeros, which allow for more efficient autodifferentiation rules. In particular:\n",
-      "- the fwd and bwd functions take an extra `perturbed` argument, which     indicates which primals actually need a gradient. You can use this     to skip computing the gradient for any unperturbed value. (You can     also safely just ignore this if you wish.)\n",
-      "- `None` was previously passed to indicate a symbolic zero gradient for     all objects that weren't inexact arrays, but all inexact arrays     always had an array-valued gradient. Now, `None` may also be passed     to indicate that an inexact array has a symbolic zero gradient.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "%matplotlib inline\n",
@@ -101,16 +90,12 @@
     "from continuous_discrete_nonlinear_gaussian_ssm import EnKFHyperParams, EKFHyperParams, UKFHyperParams\n",
     "\n",
     "# set up drift function\n",
-    "from continuous_discrete_nonlinear_gaussian_ssm.models import (\n",
-    "    LearnableFunction,\n",
-    "    ConstantLearnableFunction,\n",
-    "    LinearLearnableFunction,\n",
-    ")\n"
+    "from continuous_discrete_nonlinear_gaussian_ssm.models import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,11 +170,19 @@
     "        return foo\n",
     "\n",
     "\n",
-    "learnable_drift = CustomDrift(params=jnp.array([10.0, 28.0, 8 / 3]))\n",
-    "learnable_emission = LinearLearnableFunction(params=jnp.array([[1.0, 0.0, 0.0]]))\n",
-    "learnable_diffusion_cov = ConstantLearnableFunction(params=jnp.eye(state_dim))\n",
-    "learnable_diffusion_coefficient = ConstantLearnableFunction(params=0.1 * jnp.eye(state_dim))\n",
-    "learnable_emission_cov = ConstantLearnableFunction(params=jnp.eye(emission_dim))\n",
+    "learnable_drift = {\"params\": CustomDrift(params=jnp.array([10.0, 28.0, 8 / 3])),\n",
+    "                   \"props\": CustomDrift(params=ParameterProperties())}\n",
+    "\n",
+    "learnable_emission = {\"params\": LearnableLinear(weights=jnp.array([[1.0, 0.0, 0.0]]), bias=jnp.zeros(emission_dim)),\n",
+    "                      \"props\": LearnableLinear(weights=ParameterProperties(), bias=ParameterProperties())}\n",
+    "\n",
+    "learnable_diffusion_cov = {\"params\": LearnableMatrix(params=jnp.eye(state_dim)),\n",
+    "                            \"props\": LearnableMatrix(params=ParameterProperties(constrainer=RealToPSDBijector()))}\n",
+    "\n",
+    "learnable_diffusion_coefficient = {\"params\": LearnableMatrix(params=0.1*jnp.eye(state_dim)),\n",
+    "                                   \"props\": LearnableMatrix(params=ParameterProperties())}\n",
+    "learnable_emission_cov = {\"params\": LearnableMatrix(params=jnp.eye(emission_dim)),\n",
+    "                          \"props\": LearnableMatrix(params=ParameterProperties(constrainer=RealToPSDBijector()))}\n",
     "\n",
     "true_model = ContDiscreteNonlinearGaussianSSM(state_dim, emission_dim)"
    ]
@@ -205,15 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sampling from SDE solver path (this may be an unnecessarily poor approximation if you're simulating from a linear SDE)...\n",
-      "state.shape (3,)\n"
+      "Sampling from SDE solver path (this may be an unnecessarily poor approximation if you're simulating from a linear SDE). It is an appropriate choice for non-linear SDEs.\n"
      ]
     },
     {
@@ -222,7 +214,7 @@
        "Text(0.5, 1.0, 'Training Emissions')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -252,12 +244,17 @@
     "# t_emissions = jnp.arange(num_timesteps) * dt\n",
     "# t_emissions = t_emissions.reshape(-1, 1)\n",
     "\n",
+    "initial_mean = {\"params\": jnp.array([0.0, 0.0, 0.0]),\n",
+    "                \"props\": ParameterProperties()}\n",
+    "initial_cov = {\"params\": jnp.eye(state_dim) * (init_state_sd**2),\n",
+    "                \"props\": ParameterProperties(constrainer=RealToPSDBijector())}\n",
+    "\n",
     "key = jr.PRNGKey(0)\n",
     "key, key_root = jr.split(key)\n",
     "true_params, param_props = true_model.initialize(\n",
     "    key,\n",
-    "    initial_mean=jnp.array([0.0, 0.0, 0.0]),\n",
-    "    initial_cov=jnp.eye(state_dim) * (init_state_sd**2),  # want to initialize at ~ initial mean\n",
+    "    initial_mean=initial_mean,\n",
+    "    initial_cov=initial_cov,  # want to initialize at ~ initial mean\n",
     "    dynamics_drift=learnable_drift,\n",
     "    dynamics_diffusion_coefficient=learnable_diffusion_coefficient,\n",
     "    dynamics_diffusion_cov=learnable_diffusion_cov,\n",
@@ -294,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -338,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -412,15 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sampling from transition distribution (this may be a poor approximation if you're simulating from a non-linear SDE)...\n",
-      "state.shape (3,)\n"
+      "Sampling from transition distribution (this may be a poor approximation if you're simulating from a non-linear SDE). It is a highly appropriate choice for linear SDEs.\n"
      ]
     },
     {
@@ -429,7 +425,7 @@
        "Text(0.5, 1.0, 'Training Emissions')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -461,12 +457,18 @@
     "# t_emissions = jnp.arange(num_timesteps) * dt\n",
     "# t_emissions = t_emissions.reshape(-1, 1)\n",
     "\n",
+    "initial_mean = {\"params\": jnp.array([0.0, 0.0, 0.0]), \"props\": ParameterProperties()}\n",
+    "initial_cov = {\n",
+    "    \"params\": jnp.eye(state_dim) * (init_state_sd**2),\n",
+    "    \"props\": ParameterProperties(constrainer=RealToPSDBijector()),\n",
+    "}\n",
+    "\n",
     "key = jr.PRNGKey(0)\n",
     "key, key_root = jr.split(key)\n",
     "true_params, param_props = true_model.initialize(\n",
     "    key,\n",
-    "    initial_mean=jnp.array([0.0, 0.0, 0.0]),\n",
-    "    initial_cov=jnp.eye(state_dim) * (init_state_sd**2),  # want to initialize at ~ initial mean\n",
+    "    initial_mean=initial_mean,\n",
+    "    initial_cov=initial_cov,  # want to initialize at ~ initial mean\n",
     "    dynamics_drift=learnable_drift,\n",
     "    dynamics_diffusion_coefficient=learnable_diffusion_coefficient,\n",
     "    dynamics_diffusion_cov=learnable_diffusion_cov,\n",
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -600,6 +602,13 @@
     "compute_and_print_rmse_comparison(true_states[:, -1], ukf_filtered.filtered_means[:, -1], 1, \"UKF\")\n",
     "plot_lorenz(t_emissions, true_states, emissions, x_est=ukf_filtered.filtered_means, est_type=\"UKF\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
