remove small bug from notebook

--- a/src/notebooks/non_linear/cdnlgssm_hmc.ipynb
+++ b/src/notebooks/non_linear/cdnlgssm_hmc.ipynb
@@ -542,48 +542,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Array([[1., 0.],\n",
-       "        [0., 1.]], dtype=float32),\n",
-       " False)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fitted_params.initial.cov, param_props.initial.cov.trainable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(500, 2)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "param_samples.initial.mean.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -815,24 +773,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Array([0.47823134, 0.2494872 ], dtype=float32),\n",
-       " Array([-0.00879628,  0.54703426], dtype=float32))"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "true_states[0], filtered_posterior.filtered_means[0]"
+    "print(\"Notice that initial mean was not trainable, but the HMC samples show a distribution of initial means.\")\n",
+    "print(param_props.initial.mean.trainable)"
    ]
   },
   {
